@@ -1,3 +1,8 @@
+2022-02-12 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
+
+	* support/regression/tests/bug-3289.c:
+	  Test for recently-fixed bug #3289.
+
 2022-02-13 Gabriele Gorla <gorlik@yahoo.com>
 
 	* sdcc/src/mos6502/gen.c:
